--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+minreq = { version = "2.11.0", features = ["https", "json-using-serde"] }
 pretty_assertions = "1.4.0"
+serde_json = "1.0.111"
+url = "2.5.0"
